# pynamics365

./: .env.sample  .gitignore  Pipfile  mipdev.py  pyproject.toml
archiving/: versioned_extract_to_ddb.py
crm_migration/: cleansing_steps.py  dedupe_and_chunk_templates.py  ds20_tables.py  duckdb_json_extracts.py  duckdb_testing.py  import_errors_to_sql.py  infer_company_name.py  load_intermediate_templates.py  load_validated_addresses_to_ddb.py  migration_etl.py  parse_legacyid_from_records.py  salesloft_crm_join.py  salesloft_to_ddb.py  salesloft_to_duckdb.py  template_validations.py  uat_dev_to_ddb.py
dml/: console.sql  console_1.sql  console_10.sql  console_11.sql  console_12.sql  console_14.sql  console_16.sql  console_17.sql  console_18.sql  console_2.sql  console_21.sql  console_22.sql  console_23.sql  console_24.sql  console_25.sql  console_26.sql  console_27.sql  console_28.sql  console_3.sql  console_30.sql  console_31.sql  console_32.sql  console_33.sql  console_34.sql  console_35.sql  console_36.sql  console_37.sql  console_39.sql  console_4.sql  console_40.sql  console_42.sql  console_43.sql  console_44.sql  console_46.sql  console_47.sql  console_48.sql  console_49.sql  console_5.sql  console_51.sql  console_52.sql  (+29 more)
pynamics365/: .env.sample  analyse_counts.py  auth.py  client.py  client_mac.py  client_windows.py  config.py  ddb_loader.py  ddb_test.py  dev_environment.py  entity.py  extract_to_load_table.py  full_extract.py  get_entities.py  main.py  models.py  name_parser.py  prod_environment.py  splink_test.py  template_validation_rules.py  templates.py  (+4 more)
(+7 files in other folders)
